Fix spread clipping on non-mobile screens

--- a/sass/site/_main.scss
+++ b/sass/site/_main.scss
@@ -18,23 +18,30 @@ h1 {
 		content: '';
 		position: absolute;
 		z-index: -1;
-		bottom: 1rem;
-		transform: translateY(50%);
 		right: -1rem;
-		width: 200%;
-		padding-top: calc(200% + 6.8rem);
+		bottom: 0;
+		transform: translateY(50%);
+		width: 1000%;
+		padding-top: 1000%;
+		$padding: 6rem;
+		$spread: 4rem;
 		background-image:
 			url(../img/diver.png),
 			radial-gradient(
-				ellipse farthest-side at calc(100% - 1rem) 50%,
-				$colour-sea-light calc(50% + 2rem),
-				transparent
+				ellipse farthest-side at 100% 50%,
+				$colour-sea-light calc(10% + #{$padding}),
+				transparent calc(10% + #{$padding + $spread})
 			)
 		;
 		background-size: 4rem, 100%;
 		background-repeat: no-repeat;
-		background-position: 100% calc(50% - 3rem);
+		background-position: 100% calc(50% - 4rem);
+
+		@media (min-width: $mq-header-narrow) {
+			right: -2rem;
+		}
 	}
+
 }
 
 }
